--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -6,19 +6,6 @@ root = true
 [*]
 indent_style = space
 
-# begin-snippet: editorconfig
-
-# Verify settings
-[*.{received,verified}.{txt,xml,json}]
-charset = "utf-8-bom"
-end_of_line = lf
-indent_size = unset
-indent_style = unset
-insert_final_newline = false
-tab_width = unset
-trim_trailing_whitespace = false
-
-# end-snippet
 
 [*.cs]
 indent_size = 4
@@ -26,21 +13,18 @@ charset = utf-8
 
 
 # Microsoft .NET properties
+trim_trailing_whitespace = true
 csharp_preferred_modifier_order = public, private, protected, internal, new, static, abstract, virtual, sealed, readonly, override, extern, unsafe, volatile, async:suggestion
-csharp_style_namespace_declarations = file_scoped:error
-dotnet_naming_rule.private_constants_rule.import_to_resharper = as_predefined
+resharper_namespace_body = file_scoped
 dotnet_naming_rule.private_constants_rule.severity = warning
 dotnet_naming_rule.private_constants_rule.style = upper_camel_case_style
 dotnet_naming_rule.private_constants_rule.symbols = private_constants_symbols
-dotnet_naming_rule.private_instance_fields_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.private_instance_fields_rule.severity = warning
 dotnet_naming_rule.private_instance_fields_rule.style = lower_camel_case_style
 dotnet_naming_rule.private_instance_fields_rule.symbols = private_instance_fields_symbols
-dotnet_naming_rule.private_static_fields_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.private_static_fields_rule.severity = warning
 dotnet_naming_rule.private_static_fields_rule.style = lower_camel_case_style
 dotnet_naming_rule.private_static_fields_rule.symbols = private_static_fields_symbols
-dotnet_naming_rule.private_static_readonly_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.private_static_readonly_rule.severity = warning
 dotnet_naming_rule.private_static_readonly_rule.style = upper_camel_case_style
 dotnet_naming_rule.private_static_readonly_rule.symbols = private_static_readonly_symbols
@@ -62,8 +46,6 @@ dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:none
 dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
 
 # ReSharper properties
-resharper_apply_on_completion = true
-resharper_csharp_wrap_lines = false
 resharper_object_creation_when_type_not_evident = target_typed
 
 # ReSharper inspection severities
@@ -92,12 +74,12 @@ resharper_redundant_suppress_nullable_warning_expression_highlighting = error
 resharper_redundant_using_directive_highlighting = error
 resharper_redundant_verbatim_string_prefix_highlighting = error
 resharper_replace_substring_with_range_indexer_highlighting = warning
-resharper_suggest_var_or_type_built_in_types_highlighting = hint
-resharper_suggest_var_or_type_elsewhere_highlighting = hint
-resharper_suggest_var_or_type_simple_types_highlighting = hint
+resharper_suggest_var_or_type_built_in_types_highlighting = error
+resharper_suggest_var_or_type_elsewhere_highlighting = error
+resharper_suggest_var_or_type_simple_types_highlighting = error
 resharper_unnecessary_whitespace_highlighting = error
 resharper_use_await_using_highlighting = warning
-resharper_use_deconstruction_highlighting = error
+resharper_use_deconstruction_highlighting = warning
 
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first = true
@@ -126,9 +108,10 @@ csharp_style_var_elsewhere = true:error
 
 # Prefer method-like constructs to have a block body
 csharp_style_expression_bodied_methods = true:error
+csharp_style_expression_bodied_local_functions = true:error
 csharp_style_expression_bodied_constructors = true:error
 csharp_style_expression_bodied_operators = true:error
-csharp_place_expr_method_on_single_line = false
+resharper_place_expr_method_on_single_line = false
 
 # Prefer property-like constructs to have an expression-body
 csharp_style_expression_bodied_properties = true:error
@@ -141,42 +124,43 @@ csharp_style_pattern_matching_over_as_with_null_check = true:error
 csharp_style_inlined_variable_declaration = true:suggestion
 csharp_style_throw_expression = true:suggestion
 csharp_style_conditional_delegate_call = true:suggestion
-csharp_style_prefer_switch_expression = true:suggestion
 
 # Newline settings
 #csharp_new_line_before_open_brace = all:error
-max_array_initializer_elements_on_line = 1
+resharper_max_array_initializer_elements_on_line = 1
 csharp_new_line_before_else = true
 csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
-csharp_place_type_constraints_on_same_line = false:error
-csharp_wrap_before_first_type_parameter_constraint = true:error
-csharp_wrap_extends_list_style = true:error
-csharp_wrap_after_dot_in_method_calls false
-csharp_wrap_before_binary_pattern_op false
-resharper_csharp_wrap_object_and_collection_initializer_style = chop_always
-resharper_csharp_place_simple_initializer_on_single_line = false
+resharper_wrap_before_first_type_parameter_constraint = true
+resharper_wrap_extends_list_style =  chop_always
+resharper_wrap_after_dot_in_method_calls = false
+resharper_wrap_before_binary_pattern_op = false
+resharper_wrap_object_and_collection_initializer_style = chop_always
+resharper_place_simple_initializer_on_single_line = false
 
 dotnet_style_require_accessibility_modifiers = never:error
 resharper_place_type_constraints_on_same_line = false
+resharper_blank_lines_inside_namespace = 0
+resharper_blank_lines_after_file_scoped_namespace_directive = 1
+resharper_blank_lines_inside_type = 0
 
 #braces https://www.jetbrains.com/help/resharper/EditorConfig_CSHARP_CSharpCodeStylePageImplSchema.html#Braces
-braces_for_ifelse = required
-braces_for_foreach = required
-braces_for_while = required
-braces_for_dowhile = required
-braces_for_lock = required
-braces_for_fixed = required
-braces_for_for = required
+resharper_braces_for_ifelse = required
+resharper_braces_for_foreach = required
+resharper_braces_for_while = required
+resharper_braces_for_dowhile = required
+resharper_braces_for_lock = required
+resharper_braces_for_fixed = required
+resharper_braces_for_for = required
 
 # Xml files
 [*.{xml,config,nuspec,resx,vsixmanifest,csproj,targets,props}]
 indent_size = 2
 # https://www.jetbrains.com/help/resharper/EditorConfig_XML_XmlCodeStylePageSchema.html#resharper_xml_blank_line_after_pi
-blank_line_after_pi = false
-space_before_self_closing = true
+resharper_blank_line_after_pi = false
+resharper_space_before_self_closing = true
 
 [*.json]
 indent_size = 2
