--- a/src/Verify.Fixie/Verify.Fixie.csproj
+++ b/src/Verify.Fixie/Verify.Fixie.csproj
@@ -12,5 +12,7 @@
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
     <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="buildTransitive\Verify.Fixie.props" />
     <None Include="buildTransitive\Verify.Fixie.props" Pack="true" PackagePath="build\Verify.Fixie.props" />
+    <Compile Include="..\Verify\Guard.cs" />
+    <Compile Include="..\Verify\Extensions.cs" />
   </ItemGroup>
 </Project>
