--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -23,7 +23,22 @@ build_script:
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
     }
 - dotnet build src --configuration Release
-- dotnet test src --configuration Release --no-build --no-restore
+- dotnet test src/DeterministicTests --configuration Release --no-build --no-restore
+- dotnet test src/FSharpTests --configuration Release --no-build --no-restore
+- dotnet test src/StaticSettingsTests --configuration Release --no-build --no-restore
+- dotnet test src/StrictJsonTests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.ClipboardAccept.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.ExceptionParsing.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Expecto.DerivePaths.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.MSTest.DerivePaths.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.MSTest.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.NUnit.DerivePaths.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.NUnit.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore
+- dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore
 
 #- pwsh: |
 #    if ($isWindows) {
