--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -39,6 +39,7 @@ build_script:
 - dotnet test src/Verify.Tests --configuration Release --no-build --no-restore
 - dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore
 - dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore
+- dotnet fixie src/Verify.Fixie.Tests --configuration Release --no-build --no-restore
 
 #- pwsh: |
 #    if ($isWindows) {
