--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -6,7 +6,7 @@ environment:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-build_script:
+before_build:
 - pwsh: |
     if ($isWindows) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
@@ -23,6 +23,7 @@ build_script:
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
     }
 - dotnet tool restore --tool-manifest src/.config/dotnet-tools.json
+build_script:
 - dotnet build src --configuration Release
 - dotnet test src/DeterministicTests --configuration Release --no-build --no-restore
 - dotnet test src/FSharpTests --configuration Release --no-build --no-restore
