--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -42,7 +42,7 @@ build_script:
 - dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore
 - dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore
 - cd src/Verify.Fixie.Tests
-- dotnet fixie
+- dotnet fixie --no-build --configuration Release
 
 #- pwsh: |
 #    if ($isWindows) {
