--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -1,5 +1,7 @@
 image:
 - Visual Studio 2022
+#- macOS
+#- Ubuntu
 environment:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
@@ -8,7 +10,35 @@ build_script:
 - pwsh: |
     if ($isWindows) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
+      ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+    }
+    if ($isMacOS) {
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
+      sudo chmod u+x dotnet-install.sh
+      sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/local/share/dotnet'
+    }
+    if ($isLinux) {
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
       sudo chmod u+x dotnet-install.sh
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
     }
 - dotnet build src --configuration Release
+- dotnet test src --configuration Release --no-build --no-restore
+
+#- pwsh: |
+#    if ($isWindows) {
+#      Set-Culture -CultureInfo de-DE
+#      dotnet test src --configuration Release --no-build --no-restore
+#      Set-TimeZone -Name "Russia TZ 2 Standard Time"
+#      dotnet test src --configuration Release --no-build --no-restore
+#    }
+# begin-snippet: AppVeyorArtifacts
+on_failure:
+  - ps: Get-ChildItem *.received.* -recurse | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
+# end-snippet
+test: off
+after_build:
+- pwsh: |
+    if ($isWindows) {
+      Get-ChildItem *.nupkg -recurse | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
+    }
