--- a/src/FSharpTests/FSharpTests.fsproj
+++ b/src/FSharpTests/FSharpTests.fsproj
@@ -16,4 +16,5 @@
   </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
+  <Import Project="$(ProjectDir)..\Verify.Xunit\buildTransitive\Verify.Xunit.props" />
 </Project>
