--- a/src/Verify.Xunit/buildTransitive/Verify.Xunit.props
+++ b/src/Verify.Xunit/buildTransitive/Verify.Xunit.props
@@ -5,7 +5,28 @@
     <Using Include="Xunit" />
     <Using Include="VerifyXunit.Verifier" Static="True" />
   </ItemGroup>
-  <ItemGroup>
-    <AssemblyAttribute Include="VerifyXunit.UseVerifyAttribute"/>
-  </ItemGroup>
+  <PropertyGroup>
+    <VerifyXunitAttributesFile>VerifyXunit.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyXunitAttributesFile>
+  </PropertyGroup>
+  <Target Name="WriteVerifyXunitAttributes"
+          Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#'"
+          BeforeTargets="BeforeCompile;CoreCompile"
+          Inputs="$(MSBuildAllProjects)"
+          Outputs="$(IntermediateOutputPath)$(VerifyXunitAttributesFile)">
+    <PropertyGroup>
+      <AttributesFilePath>$(IntermediateOutputPath)$(VerifyXunitAttributesFile)</AttributesFilePath>
+    </PropertyGroup>
+    <ItemGroup>
+      <Attributes Include="VerifyXunit.UseVerifyAttribute" />
+      <!-- Ensure not part of Compile, as a workaround for https://github.com/dotnet/sdk/issues/114 -->
+      <Compile Remove="$(AttributesFilePath)" />
+    </ItemGroup>
+    <WriteCodeFragment AssemblyAttributes="@(Attributes)"
+                       Language="$(Language)"
+                       OutputFile="$(AttributesFilePath)">
+      <Output TaskParameter="OutputFile" ItemName="Compile" Condition="$(Language) != 'F#'" />
+      <Output TaskParameter="OutputFile" ItemName="CompileBefore" Condition="$(Language) == 'F#'" />
+      <Output TaskParameter="OutputFile" ItemName="FileWrites" />
+    </WriteCodeFragment>
+  </Target>
 </Project>
