--- a/src/Verify.Tests/Verify.Tests.csproj
+++ b/src/Verify.Tests/Verify.Tests.csproj
@@ -12,11 +12,11 @@
     <PackageReference Include="InfoOf.Fody" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="26.0.1" PrivateAssets="all" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.1" Condition="$(TargetFramework) == 'net8.0' OR $(TargetFramework) == 'net7.0'" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.1" Condition="$(TargetFramework) == 'net9.0' $(TargetFramework) == 'net8.0' OR $(TargetFramework) == 'net7.0'" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6" PrivateAssets="all" />
     <PackageReference Include="Xunit" Version="2.6.6" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.109" PrivateAssets="all" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.110" PrivateAssets="all" />
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
     <ProjectReference Include="..\Verify.ClipboardAccept\Verify.ClipboardAccept.csproj" />
     <ProjectReference Include="..\Verify.SamplePlugin\Verify.SamplePlugin.csproj" />
