--- a/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
+++ b/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
@@ -6,9 +6,9 @@
   <ItemGroup>
     <!-- begin-snippet: xunitv3-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
-    <PackageReference Include="Verify.Xunit" Version="26.3.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.24" PrivateAssets="all" />
-    <PackageReference Include="xunit.v3" Version="0.2.0-pre.69" />
+    <PackageReference Include="Verify.XunitV3" Version="26.3.1-beta.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.30" PrivateAssets="all" />
+    <PackageReference Include="xunit.v3" Version="0.3.0-pre.18" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
