--- a/src/Verify.TUnit/buildTransitive/Verify.TUnit.props
+++ b/src/Verify.TUnit/buildTransitive/Verify.TUnit.props
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Condition="$(Language) == 'C#' and ($(ImplicitUsings) == 'enable' or $(ImplicitUsings) == 'true')">
-    <Using Include="VerifyNUnit" />
-    <Using Include="VerifyNUnit.Verifier" Static="True" />
-    <Using Include="NUnit" />
-    <Using Include="NUnit.Framework" />
+    <Using Include="TUnit" />
+    <Using Include="TUnit.Verifier" Static="True" />
+    <Using Include="TUnit" />
   </ItemGroup>
 </Project>
