--- a/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
+++ b/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <PlatformTarget>x64</PlatformTarget>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
