--- a/src/Verify.TUnit/buildTransitive/Verify.TUnit.props
+++ b/src/Verify.TUnit/buildTransitive/Verify.TUnit.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Condition="$(Language) == 'C#' and ($(ImplicitUsings) == 'enable' or $(ImplicitUsings) == 'true')">
     <Using Include="TUnit" />
-    <Using Include="TUnit.Verifier" Static="True" />
+    <Using Include="VerifyTUnit.Verifier" Static="True" />
     <Using Include="TUnit" />
   </ItemGroup>
 </Project>
