--- a/src/Verify.TUnit.DerivePaths.Tests/Verify.TUnit.DerivePaths.Tests.csproj
+++ b/src/Verify.TUnit.DerivePaths.Tests/Verify.TUnit.DerivePaths.Tests.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <SignAssembly>false</SignAssembly>
     <NoWarn>$(NoWarn);CA1822</NoWarn>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="TUnit" />
     <ProjectReference Include="..\Verify.TUnit\Verify.TUnit.csproj" />
