--- a/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
+++ b/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
@@ -5,11 +5,11 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <PlatformTarget>x64</PlatformTarget>
     <SignAssembly>false</SignAssembly>
+    <OutputType>Exe</OutputType>
     <NoWarn>$(NoWarn);CA1822</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
 
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
