--- a/src/Verify.XunitV3/Verify.XunitV3.csproj
+++ b/src/Verify.XunitV3/Verify.XunitV3.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net472;net48</TargetFrameworks>
     <TargetFrameworks>$(TargetFrameworks);net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
-    <Version>$(Version)-beta.1</Version>
+    <Version>$(Version)</Version>
   </PropertyGroup>
 
   <ItemGroup>
