--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -12,8 +12,9 @@
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\Verify.MSTest.SourceGenerator\Verify.MSTest.SourceGenerator.csproj" ReferenceOutputAssembly="false" PackAsAnalyzer="true" OutputItemType="Analyzer" />
 
-    <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="buildTransitive\Verify.MSTest.props" />
-    <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="build\Verify.MSTest.props" />
+    <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="build\" />
+    <None Include="..\Verify.MSTest.SourceGenerator\bin\Release\netstandard2.0\Verify.MSTest.SourceGenerator.dll" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
